[package]
name = "poolboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
hyper = "0.14.26"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
rand = "0.8"
serde_derive = "1.0.160"
