[package]
name = "poolboy"
version = "0.1.2"
edition = "2021"
authors = ["Cristian <poolboy@simplelogin.dedyn.io>"]
description = "A tiny web server for Monero P2Pool stats"
license = "MIT"
homepage = "https://github.com/caheredia/poolboy"
repository = "https://github.com/caheredia/poolboy"
keywords = ["monero", "server", "p2pool"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
hyper = "0.14.26"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
rand = "0.8"
serde_derive = "1.0.160"
chrono = { version ="0.4.24", features = ["serde"] }
serde_with = "2.3.2"
clap = { version = "4.2.4", features = ["derive"] }
